--- a/.github/workflows/gates.staging.yml
+++ b/.github/workflows/gates.staging.yml
@@ -11,4 +11,4 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Squawk
-        run: echo 'SQUAWK!'
+        run: echo 'SQUAWK! SQUAWK!'
