try setting token explicitely

--- a/.github/workflows/cannons.staging.yml
+++ b/.github/workflows/cannons.staging.yml
@@ -38,6 +38,7 @@ jobs:
           git config user.name "ci-bot"
           git config user.email "ci-bot@users.noreply.github.com"
           git tag ${{ steps.vars.outputs.rci }}
+          git remote set-url origin https://x-access-token:${GH_TOKEN}@github.com/${{ github.repository }}
           git push origin ${{ steps.vars.outputs.rci }}
         env:
           GH_TOKEN: ${{ secrets.PR_TOKEN }}
